# turbine

./: .gitignore  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  build.sh  turbine.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  docker-release.yml  profile-hetzner.yml  rust.yml  scorecard.yml  test.yml  verify-benchmark.yml
benchmarks/results/: README.md
benchmarks/results/history/: 2026-04-11-0.1.0.md  2026-04-12-0.1.0.md  2026-04-12-v0.2.0.md  2026-04-13-v0.2.0.md  2026-04-18-v0.3.0.md  2026-04-19-v0.3.0.md  2026-04-19-v0.4.0.md  2026-04-19-v0.4.1.md  2026-04-20-v0.4.2.md  2026-04-23-v0.5.0.md  2026-04-24-v0.5.3.md  2026-04-26-v0.5.4.md  2026-04-26-v0.5.5.md  2026-04-26-v0.5.6.md  2026-04-26-v0.5.7.md  2026-04-27-v0.5.8.json  2026-04-27-v0.5.8.md  README.md
benchmarks/scripts/: Dockerfile.fpm  compare.py  fpm-entrypoint.sh  fpm-nginx.conf  profile-mandelbrot.sh  report.py  run-verify-frankenphp.sh  run-verify-hetzner.sh  run-verify.sh  run.sh  setup.sh  wrk-framework.lua  wrk-report.lua  wrk-verify.lua
benchmarks/scripts/php/: hello.php  html_50k.php  pdf_50k.php  random_50k.php  verify_compute.php  verify_dynamic.php  verify_echo.php  verify_payload.php
crates/turbine-cache/: Cargo.toml
crates/turbine-cache/src/: coalescer.rs  lib.rs  store.rs
crates/turbine-core/: Cargo.toml  build.rs
crates/turbine-core/src/: acme.rs  admin.rs  async_io.rs  bootstrap.rs  cli.rs  cli_cmds.rs  compat.rs  compression.rs  config.rs  dashboard.rs  embed.rs  features.rs  http_helpers.rs  io_uring_backend.rs  main.rs  path_guard.rs  prometheus.rs  response.rs  shared_table.rs  task_queue.rs  tls.rs  websocket.rs
crates/turbine-core/src/templates/: dashboard.html
crates/turbine-engine/: Cargo.toml
crates/turbine-engine/src/: engine.rs  error.rs  lib.rs  output.rs
crates/turbine-metrics/: Cargo.toml
crates/turbine-metrics/src/: collector.rs  histogram.rs  lib.rs
crates/turbine-php-sys/: Cargo.toml  build.rs
crates/turbine-php-sys/src/: embed.rs  lib.rs  sapi.rs  turbine_sapi_handler.c  turbine_thread_support.c  turbine_worker_lifecycle.c  zend.rs
crates/turbine-security/: Cargo.toml
crates/turbine-security/src/: behaviour_guard.rs  code_guard.rs  error.rs  lib.rs  sql_guard.rs
crates/turbine-worker/: Cargo.toml
crates/turbine-worker/src/: async_io.rs  error.rs  lib.rs  persistent.rs  pool.rs  shared_mem.rs  stream.rs  worker.rs
docker/: Dockerfile  Dockerfile.profile  README.md  docker-compose.turbine.yml  entrypoint.sh  turbine.toml
docker/profile-app/: helloworld.php  jitstatus.php  mandelbrot.php  pdf50k.php  turbine.toml
docs/: README.md  architecture.md  compile.md  compression.md  config.md  cors.md  dashboard.md  early-hints.md  embed.md  extensions.md  hot-reload.md  known-issues.md  laravel.md  logging.md  migrate.md  performance.md  phalcon.md  security.md  shared-state.md  tls.md  virtual-hosts.md  wordpress.md  worker-lifecycle.md  worker.md  x-sendfile.md
examples/: README.md
examples/laravel/: README.md  turbine-boot.php  turbine-cleanup.php  turbine-handler.php  turbine-production.toml  turbine.toml
examples/phalcon/: README.md  turbine-boot.php  turbine-cleanup.php  turbine-handler.php  turbine-production.toml  turbine.toml
examples/phalcon/app/: config.php
examples/phalcon/public/: index.php
examples/raw-php/: README.md
examples/raw-php/database-crud/: turbine.toml
examples/raw-php/database-crud/public/: index.php
examples/raw-php/file-upload/: turbine.toml
examples/raw-php/file-upload/public/: index.php
examples/raw-php/hello-world/: turbine.toml
examples/raw-php/hello-world/public/: index.php
examples/raw-php/rest-api/: turbine.toml
examples/raw-php/rest-api/public/: index.php
examples/raw-php/security-demo/: turbine.toml
examples/raw-php/security-demo/public/: api.php  index.php
examples/raw-php/session-auth/: turbine.toml
examples/raw-php/session-auth/public/: index.php
examples/raw-php/websocket-sse/: turbine.toml
examples/raw-php/websocket-sse/public/: index.php
examples/swoole-demo/: README.md  index.php  turbine.toml
examples/swoole-demo/data/: features.json  site.json
examples/symfony/: README.md  turbine-production.toml  turbine.toml
examples/task-consumer/: README.md  consumer.php
examples/wordpress/: README.md  turbine-production.toml  turbine.toml
scripts/: build-embed.sh  build-pgo.sh  build-php-embed.sh  build-static-musl.sh  profile-docker.sh  test_server.sh
