[workspace]
resolver = "2"
members = [
    "crates/turbine-core",
    "crates/turbine-php-sys",
    "crates/turbine-engine",
    "crates/turbine-worker",
    "crates/turbine-security",
    "crates/turbine-metrics",
    "crates/turbine-cache",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-only"
repository = "https://github.com/turbine-php/turbine"

[workspace.dependencies]
turbine-php-sys = { path = "crates/turbine-php-sys" }
turbine-engine = { path = "crates/turbine-engine" }
turbine-worker = { path = "crates/turbine-worker" }
turbine-security = { path = "crates/turbine-security" }
turbine-metrics = { path = "crates/turbine-metrics" }
turbine-cache = { path = "crates/turbine-cache" }

# External dependencies
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
http-body-util = "0.1"
bytes = "1"
http = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
dashmap = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
aho-corasick = "1"
nix = { version = "0.29", features = ["mman", "signal", "process"] }
libc = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
multer = "3"
futures-core = "0.3"
flate2 = "1"
brotli = "7"
zstd = "0.13"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
sha2 = "0.10"
parking_lot = "0.12"
# ACME (Let's Encrypt) auto-provisioning — optional
instant-acme = "0.7"
rcgen = "0.13"
pem = "3"
