[package]
name = "turbine-cache"
version.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
xxhash-rust = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
parking_lot = { workspace = true }
bytes = { workspace = true }
