[package]
name = "turbine-security"
description = "Turbine in-process sandbox: execution whitelist, path guard, heuristic SQL/code input filter, per-IP behaviour guard (not a WAF)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aho-corasick = { workspace = true }
xxhash-rust = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
